--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 /*Importing the material design css file for Angular Material*/
+body{
+    background-color: rgb(247, 246, 244);
+}
