--- a/src/app/recipies/view-recipies/view-recipies.component.css
+++ b/src/app/recipies/view-recipies/view-recipies.component.css
@@ -1,12 +1,20 @@
-.image_view{
-    width: 100%;
-    height: 100%;
+.image_view {
+  width: 100%;
+  height: 100%;
 }
+
 .recipe_card{
-    width: 15%;
-    height: 20%;
-    display: inline-block;
-    margin-top: 2%;
-    margin-left: 2%;
-    margin-right: 2%;
+  
+}
+
+.css_grid {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  grid-template-rows: 100%; 
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
 }
