--- a/src/app/recipies/view-recipies/view-recipies.component.html
+++ b/src/app/recipies/view-recipies/view-recipies.component.html
@@ -1,15 +1,18 @@
-<mat-card class="recipe_card" *ngFor="let recipe of recipies; index as i">
-  <mat-card-content class="material_card_content">
-    <p>
-      <img class="image_view" src="assets/images/schnitzel.jpg" />
-    </p>
-    <p>
-      <strong>{{ recipe.name }}</strong>
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button (click)="routeToDetailView(pb_entry)">
-      <mat-icon>notes</mat-icon>
-    </button>
-  </mat-card-actions>
-</mat-card>
+<div class="css_grid">
+  <mat-card class="recipe_card" *ngFor="let recipe of recipies; index as i">
+    <mat-card-content class="material_card_content">
+      <p>
+        <img class="image_view" [src]="recipe.image" />
+      </p>
+      <p>
+        <strong>{{ recipe.name }}</strong>
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button (click)="routeToDetailView(pb_entry)">
+        <mat-icon>notes</mat-icon>
+      </button>
+    </mat-card-actions>
+  </mat-card>
+  
+</div>
