Added custom fonts and a header to the material card grid with a horizontal line

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -20,7 +20,7 @@
     </div>
   </mat-toolbar-row>
   <mat-toolbar-row class="second_navbar_row">
-    <span>Suche</span>
+    <span class="search_header">Suche</span>
     <form class="search">
       <mat-form-field>
         <input matInput /><mat-icon>search</mat-icon>
