--- a/src/app/recipies/view-recipies-detail/view-recipies-detail.component.html
+++ b/src/app/recipies/view-recipies-detail/view-recipies-detail.component.html
@@ -1,3 +1,17 @@
-<p>
-  view-recipies-detail works!
-</p>
+<div class="recipe_card_wrapper">
+    <mat-card class="recipe_card">
+      <mat-card-content class="material_card_content">
+        <p>
+          <img class="image_view" [src]="recipe.image" />
+        </p>
+        <p class="recipe_card_name">
+          {{ recipe.name }}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="routeToDetailView(recipe)">
+          <mat-icon>notes</mat-icon>
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
