--- a/src/app/recipies/view-recipies/view-recipies.component.html
+++ b/src/app/recipies/view-recipies/view-recipies.component.html
@@ -12,7 +12,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button (click)="routeToDetailView(pb_entry)">
+      <button mat-button (click)="routeToDetailView(recipe)">
         <mat-icon>notes</mat-icon>
       </button>
     </mat-card-actions>
