Ingredients HashMap Added gather recipe ingredients using a method in the Dataservice

--- a/src/app/recipies/view-recipies-detail/view-recipies-detail.component.html
+++ b/src/app/recipies/view-recipies-detail/view-recipies-detail.component.html
@@ -8,6 +8,10 @@
         <p class="recipe_card_name">
           {{ recipe.name }}
         </p>
+        Zutaten:
+        <p *ngFor="let ingredient of recipe_ingredients">
+          {{ingredient.name}} {{ingredient.unit}} {{ingredient.category}}
+        </p>
       </div>
     </mat-card-content>
     <mat-card-actions>
