Added Recipe Add Page including Material Stepper

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -19,7 +19,7 @@
       <button
         mat-button
         class="add_recipe_button"
-        (click)="routeToDetailView(pb_entry)"
+        (click)="routeToAddRecipe()"
       >
         Reiche dein Rezept ein
       </button>
