Recipe Adding works additional input validation is required to be added (e.g duplicate check

--- a/src/app/recipies/add-recipe/add-recipe.component.css
+++ b/src/app/recipies/add-recipe/add-recipe.component.css
@@ -33,3 +33,10 @@ input{
   border-color: black;
   font-family: "Courgette", cursive;
 }
+.error_code{
+  color:red;
+}
+.input_description{
+  min-width: 100%;
+  width: 100%;
+}
