--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -10,10 +10,10 @@
       <button mat-button class="other_button" (click)="routeToDetailView()">
         Zutaten
       </button>
-      <button mat-button class="other_button" (click)="routeToDetailView(pb_entry)">
+      <button mat-button class="other_button" (click)="routeToRecipeView()">
         Kontakt
       </button>
-      <button mat-button class="basket_button" (click)="routeToDetailView(pb_entry)">
+      <button mat-button class="basket_button" (click)="routeToBasketView()">
         Einkaufswagen
       </button>
       <button
