--- a/src/app/basket/view-basket/view-basket.component.css
+++ b/src/app/basket/view-basket/view-basket.component.css
@@ -11,14 +11,19 @@
   grid-row-gap: 15px;
 }
 table {
-    width: 100%;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  td, th {
-    width: 25%;
-  }
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+td,
+th {
+  width: 25%;
+}
+h2 {
+  font-family: "Amatic SC", cursive;
+  font-size: 50px;
+}
