--- a/src/app/recipies/view-recipies-detail/view-recipies-detail.component.html
+++ b/src/app/recipies/view-recipies-detail/view-recipies-detail.component.html
@@ -31,7 +31,7 @@
         </button>
         <button
           mat-button
-          (click)="routeToRecipeView()"
+          (click)="ingredientsAddToBasket()"
           class="mat-card-actions_buttons"
         >
           Zutaten in den Einkaufswagen
