Added Preloading Screen

--- a/src/app/page-components/index/index.component.css
+++ b/src/app/page-components/index/index.component.css
@@ -8,6 +8,8 @@
 .button_group {
   display: inline-block;
   vertical-align: text-bottom;
+  margin-top: 100px;
+  margin-right: 75px; 
 }
 .other_button{
     color: black;
