--- a/src/app/recipies/add-recipe/add-recipe.component.html
+++ b/src/app/recipies/add-recipe/add-recipe.component.html
@@ -123,6 +123,7 @@
                 formControlName="thirdCtrl"
                 cdkAutosizeMinRows="10"
                 cdkAutosizeMaxRows="100"
+                [(ngModel)]="input_description"
               ></textarea>
             </mat-form-field>
             <h3>
