--- a/src/app/basket/view-basket/view-basket.component.html
+++ b/src/app/basket/view-basket/view-basket.component.html
@@ -10,7 +10,7 @@
         />
       </mat-form-field>
 
-      <div class="mat-elevation-z8">
+      <div>
         <mat-table [dataSource]="dataSource" matSort>
           <ng-container matColumnDef="name">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -42,13 +42,9 @@
 
           <ng-container matColumnDef="button">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
-              
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
-              <button
-                mat-button
-                (click)="deleteBasketItem(row)"
-              >
+              <button mat-button (click)="deleteBasketItem(row)">
                 <mat-icon>delete_forever</mat-icon>
               </button>
             </mat-cell>
