Ingredient Page and Datastructure Overhaul

--- a/src/app/basket/view-basket/view-basket.component.html
+++ b/src/app/basket/view-basket/view-basket.component.html
@@ -47,6 +47,9 @@
               <button mat-button (click)="deleteBasketItem(row)">
                 <mat-icon>delete_forever</mat-icon>
               </button>
+              <button mat-button (click)="editBasketItem(row)">
+                <mat-icon>edit</mat-icon>
+              </button>
             </mat-cell>
           </ng-container>
 
@@ -58,7 +61,7 @@
 
         <mat-paginator
           #BasketPaginator
-          [pageSizeOptions]="[5, 10, 20]"
+          [pageSizeOptions]="[25, 50, 100]"
         ></mat-paginator>
       </div>
     </mat-card-content>
