--- a/src/app/page-components/index/index.component.html
+++ b/src/app/page-components/index/index.component.html
@@ -7,20 +7,24 @@
       <button mat-button class="other_button" (click)="routeToRecipeView()">
         Home
       </button>
-      <button mat-button class="other_button" (click)="routeToDetailView()">
+      <button mat-button class="other_button" (click)="routeToIngredientView()">
         Zutaten
       </button>
-      <button mat-button class="other_button" (click)="routeToRecipeView()">
+      <button mat-button class="other_button" (click)="routeToPageContact()">
         Kontakt
-      </button>
-      <button mat-button [matBadge]="basket_amount" matBadgePosition="after" matBadgeColor="warn" class="basket_button" (click)="routeToBasketView()" (document:click)="refresh()">
-        Einkaufswagen
       </button>
       <button
         mat-button
-        class="add_recipe_button"
-        (click)="routeToAddRecipe()"
+        [matBadge]="basket_amount"
+        matBadgePosition="after"
+        matBadgeColor="warn"
+        class="basket_button"
+        (click)="routeToBasketView()"
+        (document:click)="refresh()"
       >
+        Einkaufswagen
+      </button>
+      <button mat-button class="add_recipe_button" (click)="routeToAddRecipe()">
         Reiche dein Rezept ein
       </button>
     </div>
@@ -28,9 +32,27 @@
   <mat-toolbar-row class="second_navbar_row">
     <span class="search_header">Suche</span>
     <form class="search">
-      <mat-form-field>
-        <input matInput /><mat-icon>search</mat-icon>
-      </mat-form-field>
+      <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <input
+            type="text"
+            placeholder=""
+            aria-label="Assignee"
+            matInput
+            [formControl]="myControl"
+            [matAutocomplete]="auto"
+          />
+          <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-option
+              *ngFor="let recipe of recipies"
+              [value]="option"
+              (optionSelected)="index_search_detail_navigation(recipe)"
+            >
+              {{ recipe.name }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </form>
     </form>
     <span class="spacer"></span>
     <span>hier sollen unterschiedliche Kategorien stehen</span>
