--- a/src/app/recipies/view-recipies/view-recipies.component.css
+++ b/src/app/recipies/view-recipies/view-recipies.component.css
@@ -1,6 +1,8 @@
 .image_view {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  object-fit: cover;
 }
 .recipe_card {
   font-family: "Cookie", cursive;
@@ -25,7 +27,7 @@ h2 span {
 
 .header_writing {
   font-family: "Amatic SC", cursive;
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
 }
 
@@ -35,8 +37,54 @@ h2 span {
   margin-top: 5%;
   margin-bottom: 5%;
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
+  grid-template-columns: auto;
   grid-template-rows: 100%;
   grid-column-gap: 15px;
   grid-row-gap: 15px;
+}
+
+@media only screen and (min-width: 600px) {
+  .css_grid {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: 100%;
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+  }
+  .image_view {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    object-fit: cover;
+  }
+  .recipe_card {
+    font-family: "Cookie", cursive;
+  }
+  .recipe_card_name {
+    font-size: 30px;
+  }
+  .header_writing_div {
+    margin-top: 5%;
+  }
+  h2 {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1.5px solid grey;
+    line-height: 0.1em;
+  }
+  
+  h2 span {
+    background: rgb(247, 246, 244);
+    padding: 0 10px;
+  }
+  
+  .header_writing {
+    font-family: "Amatic SC", cursive;
+    font-size: 40px;
+    text-align: center;
+  }
 }
