--- a/src/app/ingredients/view-ingredients/view-ingredients.component.html
+++ b/src/app/ingredients/view-ingredients/view-ingredients.component.html
@@ -4,44 +4,26 @@
       <h2>Zutatenliste</h2>
 
       <mat-accordion>
-          <mat-expansion-panel *ngFor="let ingredient of ingredients">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                {{ingredient.category}}
-              </mat-panel-title>
-              <mat-panel-description>
-                Type your name and age
-              </mat-panel-description>
-            </mat-expansion-panel-header>
-        
-            {{ingredient.name}}
-            
-          </mat-expansion-panel>
-        </mat-accordion>
-
-
-
-
-      <mat-list>
-        <h3 mat-subheader>Folders</h3>
-        <mat-list-item *ngFor="let ingredient of ingredients">
-          <mat-icon mat-list-icon>stop</mat-icon>
-          <h4 mat-line>{{ ingredient.name }}</h4>
-          <!--<p mat-line> {{folder.updated | date}} </p>-->
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <!--<h3 mat-subheader>Notes</h3>
-        <mat-list-item *ngFor="let note of notes">
-          <mat-icon mat-list-icon>note</mat-icon>
-          <h4 mat-line>{{note.name}}</h4>
-          <p mat-line> {{note.updated | date}} </p>
-        </mat-list-item>-->
-      </mat-list>
+        <mat-expansion-panel *ngFor="let ingredient of ingredients">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              {{ ingredient.key }}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-list>
+            <mat-list-item *ngFor="let ingredient of ingredient.data">
+              <h4 mat-line>{{ ingredient.name }}</h4>
+              <p mat-line> pro {{ingredient.unit}} </p>
+            </mat-list-item>
+          </mat-list>
+        </mat-expansion-panel>
+      </mat-accordion>
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-button (click)="routeToDetailView(recipe)">
-        <mat-icon>notes</mat-icon>
+      <button mat-button (click)="routeToDetailView(recipe)"
+      class="mat-card-actions_buttons">
+        Neue Zutat
       </button>
     </mat-card-actions>
   </mat-card>
