Contact and Page Not Found Added

--- a/src/app/page-components/contact/contact.component.html
+++ b/src/app/page-components/contact/contact.component.html
@@ -1,3 +1,12 @@
-<p>
-  contact works!
-</p>
+<div class="css_grid">
+  <mat-card>
+    <mat-card-content>
+      <h2>Kontaktdaten</h2>
+
+      <p>Fehler oder Verbesserungspotential auf der Seite gefunden?</p>
+      <h3>Kontaktieren Sie uns hier</h3>
+      <a mat-button href="mailto:m-weigt@web.de"><img class="icon" src="/assets/images/mail.png"/></a>
+      <a mat-button href="https://github.com/Manuun1"><img class="icon" src="/assets/images/github.png"/></a>
+    </mat-card-content>
+  </mat-card>
+</div>
