--- a/src/app/page-components/pagenotfound/pagenotfound.component.html
+++ b/src/app/page-components/pagenotfound/pagenotfound.component.html
@@ -1,3 +1,11 @@
-<p>
-  pagenotfound works!
-</p>
+<div class="css_grid">
+  <mat-card>
+    <mat-card-content>
+      <h2>Ooops da ist etwas schiefgelaufen...</h2>
+      <h3>404 - Die angeforderte Ressource wurde nicht gefunden!</h3>
+      <button mat-button class="mat-card-actions_back_button" (click)="routeToRecipeView(recipe)">
+        Zur Rezeptübersicht
+      </button>
+    </mat-card-content>
+  </mat-card>
+</div>
