--- a/src/app/ingredients/view-ingredients/view-ingredients.component.html
+++ b/src/app/ingredients/view-ingredients/view-ingredients.component.html
@@ -13,7 +13,7 @@
           <mat-list>
             <mat-list-item *ngFor="let ingredient of ingredient.data">
               <h4 mat-line>{{ ingredient.name }}</h4>
-              <p mat-line> pro {{ingredient.unit}} </p>
+              <p mat-line>pro {{ ingredient.unit }}</p>
             </mat-list-item>
           </mat-list>
         </mat-expansion-panel>
@@ -21,8 +21,11 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-button (click)="routeToDetailView(recipe)"
-      class="mat-card-actions_buttons">
+      <button
+        mat-button
+        (click)="NewIngredient()"
+        class="mat-card-actions_buttons"
+      >
         Neue Zutat
       </button>
     </mat-card-actions>
